[package]
name = "healthkube"
version = "0.1.0"
edition = "2021"

[dependencies]
healthchecks = "3.0.4"
kube = { version = "0.65.0", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "1.0"

clap = { version = "3.0", features = ["derive", "env"] }
tokio = { version = "1.15.0", default-features = false, features = ["rt", "macros"] }
#reqwest = { version = "0.11.8", features = ["json"] }