[package]
name = "healthkube"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"

clap = { version = "3.0", features = ["derive", "env"] }

tokio = { version = "1.15.0", default-features = false, features = ["rt", "macros"] }

healthchecks = "3.0.4"

kube = { version = "0.65.0", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_21"] }

